--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -31,7 +31,7 @@ style:
   right_side_width: 210px #sidebar width, for toc
 
   # Content area max width
-  content_max_width: 1000px #content max width, for article
+  content_max_width: 1700px #content max width, for article
 
   #navigation bar background color (from left to right)
   nav_color:
@@ -62,9 +62,9 @@ style:
       enable: false
       list: []
     custom_font: # custom font for the first screen
-      enable: false
-      font_family: # the font family name of the url below
-      font_url: # The url to the font stylesheet file (css file)
+      enable: true
+      font_family: "Source Code Pro" # the font family name of the url below
+      font_url: "/source/custom-style.css" # The url to the font stylesheet file (css file)
 
   # Scroll style settings
   scroll:
@@ -83,9 +83,9 @@ custom: # custom font for the whole site
       font_family: # the font family name of the url below
       font_url: # The url to the font stylesheet file (css)
     english: # custom font for English
-      enable: false
-      font_family: # the font family name of the url below
-      font_url: # The url to the font stylesheet file (css)
+      enable: true
+      font_family: "Source Code Pro" # the font family name of the url below
+      font_url: "/source/custom-style.css" # The url to the font stylesheet file (css)
 
 # ---------------------------------------------------------------------------------------
 # Social contact link
@@ -158,7 +158,7 @@ post:
     enable: true
     auto: false # if true, show Lv1, Lv2, Lv3... , If false, show custom label
     # label array item can be one or more
-    custom_label_list: ["lol"]
+    custom_label_list: ["Mountain"]
 
 # ---------------------------------------------------------------------------------------
 # Code copy
@@ -167,9 +167,9 @@ code_block:
   copy: true # enable code copy button
   style: mac # mac | simple
   custom_font: # custom font family, default: Ubuntu Mono
-    enable: false
-    font_family: # font family name
-    font_url: # The url to the font stylesheet file (css file)
+    enable: true
+    font_family: "Source Code Pro" # font family name
+    font_url: "/source/custom-style.css" # The url to the font stylesheet file (css file)
 
 # ---------------------------------------------------------------------------------------
 # Table of Contents in the Sidebar
