--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -12,3 +12,8 @@
   link: https://mirror.tuna.tsinghua.edu.cn
   describtion: 清华大学镜像站
   avatar: https://mirror.tuna.tsinghua.edu.cn/static/img/logo-white.png
+
+- name: Tools
+  link: https://xiayunquan.gitee.io/blog/tools/
+  describtion: Tools web
+  avatar: https://xiayunquan.gitee.io/medias/logo.png
