--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -120,6 +120,7 @@ menu: #you can customize, i18n files are in the theme's languages folder. fa-reg
     icon: fa-regular fa-link
     submenus:
       redefine doc: https://redefine-docs.ohevan.com/docs/intro
+      hexo doc: https://hexo.io/zh-cn/docs
   Tools:
     path: /links
     icon: fa-regular fa-wrench
