--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "clean": "hexo clean",
     "build": "hexo generate",
     "deploy": "hexo deploy",
-    "server": "hexo server --port 52520 -o"
+    "server": "hexo server --port 52520 -o",
+    "rebuild": "hexo clean && hexo generate",
+    "onetap": "hexo clean && hexo generate && hexo deploy"
   },
   "hexo": {
-    "version": "6.3.0"
+    "version": "7.3.0"
   },
   "dependencies": {
     "hexo": "^7.3.0",
+    "hexo-all-minifier": "^0.5.7",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
