--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -17,50 +17,60 @@
 
     - name: 树形图生成器
       link: https://tree.nathanfriend.io
-      describtion: 一个代码树形图生成器
+      description: 一个代码树形图生成器
       avatar: https://tree.nathanfriend.io/favicon-32x32.png
 
     - name: 清华大学镜像站
       link: https://mirror.tuna.tsinghua.edu.cn
-      describtion: 清华大学镜像站
+      description: 清华大学镜像站
       avatar: https://mirror.tuna.tsinghua.edu.cn/static/img/logo-white.png
 
     - name: 阿里云原生应用脚手架
       link: https://start.aliyun.com/
-      describtion: spring boot镜像
+      description: spring boot镜像
       avatar: https://start.aliyun.com/images/aliyun-icon.png
 
     - name: 阿里云仓库服务
       link: https://developer.aliyun.com/mvn/guide
-      describtion: 仓库服务镜像
+      description: 仓库服务镜像
       avatar: https://start.aliyun.com/images/aliyun-icon.png
 
     - name: 腾讯云-开发者社区-angular
       link: https://cloud.tencent.com/developer/section/1489504
-      describtion: 仓库服务镜像
+      description: 仓库服务镜像
       avatar: /images/TencentCloud.png
 
     - name: 未读代码
       link: https://www.wdbyte.com/
-      describtion: 未读代码
+      description: 未读代码
       avatar: https://www.wdbyte.com/static/fav.png
 
     - name: Free Exam
       link: https://www.examtopics.com/
-      describtion: Free Exam
+      description: Free Exam
       avatar: https://www.examtopics.com/assets/images/et/favicon/favicon-32x32.png
 
     - name: Microsoft 技术文档
       link: https://learn.microsoft.com/zh-cn/docs/
-      describtion: Microsoft 技术文档
+      description: Microsoft 技术文档
       avatar: https://learn.microsoft.com/favicon.ico
 
     - name: Microsoft .Net
       link: https://learn.microsoft.com/zh-cn/training/dotnet/
-      describtion: Microsoft .Net
+      description: Microsoft .Net
       avatar: https://learn.microsoft.com/favicon.ico
 
     - name: Microsoft learn
       link: https://learn.microsoft.com/zh-cn/
-      describtion: Microsoft learn
+      description: Microsoft learn
       avatar: https://learn.microsoft.com/favicon.ico
+
+    - name: ChatGPT
+      link: https://chatgpt.com/
+      description: Best Chat AI
+      avatar: https://openai.com/favicon.ico
+
+    - name: Microsoft Copilot
+      link: https://copilot.microsoft.com/
+      description: Microsoft Chat AI
+      avatar: https://copilot.microsoft.com/sa/simg/favicon-cplt.ico
