--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -261,7 +261,7 @@ articles:
     image_border_radius: 14px # image border radius
     image_alignment: center # image alignment. left, center
     image_caption: false # Whether to display image caption
-    link_icon: true # Whether to display link icon
+    link_icon: false # Whether to display link icon
     title_alignment: left # Title alignment. left, center
     headings_top_spacing: # Top spacing for headings from h1-h6
       h1: 3.2rem
