Add regular expression

--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -185,6 +185,9 @@ navbar:
     Archives:
       path: /archives
       icon: fa-regular fa-archive # can be empty
+    Tags: 
+        icon: fa-solid fa-tags #图标
+        path: /tags/ #链接
     # Status:
     #   path: https://status.evanluo.top/
     #   icon: fa-regular fa-chart-bar
